All checkstyle issues in unit tests fixed