@@ -22,6 +22,13 @@ import java.util.Objects;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertNull;
+import static uk.gov.hmcts.ethos.replacement.docmosis.helpers.DynamicListHelper.createDynamicHearingList;
+import static uk.gov.hmcts.ethos.replacement.docmosis.helpers.DynamicListHelper.createDynamicJurisdictionCodes;
+import static uk.gov.hmcts.ethos.replacement.docmosis.helpers.DynamicListHelper.createDynamicRespondentName;
+import static uk.gov.hmcts.ethos.replacement.docmosis.helpers.DynamicListHelper.findDynamicValue;
+import static uk.gov.hmcts.ethos.replacement.docmosis.helpers.DynamicListHelper.getDynamicCodeLabel;
+import static uk.gov.hmcts.ethos.replacement.docmosis.helpers.DynamicListHelper.getDynamicValue;
+import static uk.gov.hmcts.ethos.replacement.docmosis.helpers.DynamicListHelper.getDynamicValueParty;
 
 public class DynamicListHelperTest {
 
@@ -53,22 +60,22 @@ public class DynamicListHelperTest {
     public void createDynamicListForRespondentRepresentative() {
         DynamicRespondentRepresentative.dynamicRespondentRepresentativeNames(caseDetails1.getCaseData());
         assertNotNull(caseDetails1.getCaseData().getRepCollection());
-        var dynamicValueType = new DynamicValueType();
+        dynamicValueType = new DynamicValueType();
         dynamicValueType.setCode("R: Antonio Vazquez");
         dynamicValueType.setLabel("Antonio Vazquez");
-        assertEquals(dynamicValueType, caseDetails1.getCaseData().getRepCollection().get(0)
-                .getValue().getDynamicRespRepName().getListItems().get(0));
+        assertEquals(dynamicValueType, caseDetails1.getCaseData().getRepCollection().getFirst()
+                .getValue().getDynamicRespRepName().getListItems().getFirst());
     }
 
     @Test
     public void populateDynamicRespondentRepList() {
         DynamicRespondentRepresentative.dynamicRespondentRepresentativeNames(caseDetails6.getCaseData());
-        assertNotNull(caseDetails6.getCaseData().getRepCollection().get(0).getValue().getDynamicRespRepName());
-        var dynamicValueType = new DynamicValueType();
+        assertNotNull(caseDetails6.getCaseData().getRepCollection().getFirst().getValue().getDynamicRespRepName());
+        dynamicValueType = new DynamicValueType();
         dynamicValueType.setCode("R: Antonio Vazquez");
         dynamicValueType.setLabel("Antonio Vazquez");
-        assertEquals(dynamicValueType, caseDetails6.getCaseData().getRepCollection().get(0)
-                .getValue().getDynamicRespRepName().getListItems().get(0));
+        assertEquals(dynamicValueType, caseDetails6.getCaseData().getRepCollection().getFirst()
+                .getValue().getDynamicRespRepName().getListItems().getFirst());
     }
 
     @Test
@@ -78,7 +85,7 @@ public class DynamicListHelperTest {
         dynamicValueType.setCode("R: Antonio Vazquez");
         dynamicValueType.setLabel("Antonio Vazquez");
         assertEquals(dynamicValueType, caseDetails1.getCaseData().getRestrictedReporting()
-                .getDynamicRequestedBy().getListItems().get(0));
+                .getDynamicRequestedBy().getListItems().getFirst());
     }
 
     @Test
@@ -96,9 +103,11 @@ public class DynamicListHelperTest {
         var dynamicValueRespondent = new DynamicValueType();
         dynamicValueRespondent.setCode("R: Antonio Vazquez");
         dynamicValueRespondent.setLabel("Antonio Vazquez");
-        List<DynamicValueType> listItems = DynamicListHelper.createDynamicRespondentName(caseDetails1.getCaseData().getRespondentCollection());
-        listItems.add(DynamicListHelper.getDynamicCodeLabel("C: " + caseDetails1.getCaseData().getClaimant(), caseDetails1.getCaseData().getClaimant()));
-        var dynamicValue = DynamicListHelper.getDynamicValueParty(caseDetails1.getCaseData(), listItems, "Respondent");
+        List<DynamicValueType> listItems = 
+            createDynamicRespondentName(caseDetails1.getCaseData().getRespondentCollection());
+        listItems.add(getDynamicCodeLabel("C: " + caseDetails1.getCaseData().getClaimant(), 
+            caseDetails1.getCaseData().getClaimant()));
+        var dynamicValue = getDynamicValueParty(caseDetails1.getCaseData(), listItems, "Respondent");
         assertEquals(dynamicValue, dynamicValueRespondent);
     }
 
@@ -108,30 +117,30 @@ public class DynamicListHelperTest {
         assertNotNull(caseDetails1.getCaseData().getDepositCollection());
         dynamicValueType.setCode("R: Antonio Vazquez");
         dynamicValueType.setLabel("Antonio Vazquez");
-        assertEquals(dynamicValueType, caseDetails1.getCaseData().getDepositCollection().get(0)
+        assertEquals(dynamicValueType, caseDetails1.getCaseData().getDepositCollection().getFirst()
                 .getValue().getDynamicDepositOrderAgainst().getValue());
         dynamicValueType.setCode("Tribunal");
         dynamicValueType.setLabel("Tribunal");
-        assertEquals(dynamicValueType, caseDetails1.getCaseData().getDepositCollection().get(0)
+        assertEquals(dynamicValueType, caseDetails1.getCaseData().getDepositCollection().getFirst()
                 .getValue().getDynamicDepositRequestedBy().getValue());
     }
 
     @Test
     public void dynamicDepositRefund() {
-        caseDetails1.getCaseData().getDepositCollection().get(0).getValue().setDepositRefund("Yes");
+        caseDetails1.getCaseData().getDepositCollection().getFirst().getValue().setDepositRefund("Yes");
         DynamicDepositOrder.dynamicDepositOrder(caseDetails1.getCaseData());
         dynamicValueType.setCode("R: Antonio Vazquez");
         dynamicValueType.setLabel("Antonio Vazquez");
-        assertEquals(dynamicValueType, caseDetails1.getCaseData().getDepositCollection().get(0)
+        assertEquals(dynamicValueType, caseDetails1.getCaseData().getDepositCollection().getFirst()
                 .getValue().getDynamicDepositRefundedTo().getValue());
     }
 
     @Test
     public void dynamicHearingList() {
-        List<DynamicValueType> dynamicHearingList = DynamicListHelper.createDynamicHearingList(caseDetails1.getCaseData());
+        List<DynamicValueType> dynamicHearingList = createDynamicHearingList(caseDetails1.getCaseData());
         dynamicValueType.setCode("1");
         dynamicValueType.setLabel("1 - Single - Manchester - 01 Nov 2019");
-        assertEquals(dynamicValueType, dynamicHearingList.get(0));
+        assertEquals(dynamicValueType, dynamicHearingList.getFirst());
         dynamicValueType.setCode("2");
         dynamicValueType.setLabel("2 - Single - Manchester - 25 Nov 2019");
         assertEquals(dynamicValueType, dynamicHearingList.get(1));
@@ -142,7 +151,8 @@ public class DynamicListHelperTest {
         DynamicLetters.dynamicLetters(caseDetails1.getCaseData(), "Manchester");
         dynamicValueType.setCode("1");
         dynamicValueType.setLabel("1 - Single - Manchester - 01 Nov 2019");
-        assertEquals(dynamicValueType, caseDetails1.getCaseData().getCorrespondenceType().getDynamicHearingNumber().getListItems().get(0));
+        assertEquals(dynamicValueType, caseDetails1.getCaseData().getCorrespondenceType().getDynamicHearingNumber()
+            .getListItems().getFirst());
         assertNull(caseDetails1.getCaseData().getCorrespondenceScotType());
     }
 
@@ -151,26 +161,27 @@ public class DynamicListHelperTest {
         DynamicLetters.dynamicLetters(caseDetailsScotTest1.getCaseData(), "Scotland");
         dynamicValueType.setCode("1");
         dynamicValueType.setLabel("1 - Single - Glasgow - 25 Nov 2019");
-        assertEquals(dynamicValueType, caseDetailsScotTest1.getCaseData().getCorrespondenceScotType().getDynamicHearingNumber().getListItems().get(0));
+        assertEquals(dynamicValueType, caseDetailsScotTest1.getCaseData().getCorrespondenceScotType()
+            .getDynamicHearingNumber().getListItems().getFirst());
         assertNull(caseDetailsScotTest1.getCaseData().getCorrespondenceType());
     }
 
     @Test
     public void createDynamicJurisdictionCodesTest() {
-        List<DynamicValueType> listItems = DynamicListHelper.createDynamicJurisdictionCodes(caseDetails1.getCaseData());
+        List<DynamicValueType> listItems = createDynamicJurisdictionCodes(caseDetails1.getCaseData());
         var totalJurisdictions = caseDetails1.getCaseData().getJurCodesCollection().size();
-        var dynamicValue = DynamicListHelper.getDynamicValue(caseDetails1.getCaseData().getJurCodesCollection()
-                .get(0).getValue().getJuridictionCodesList());
-        assertEquals(dynamicValue, listItems.get(0));
+        var dynamicValue = getDynamicValue(caseDetails1.getCaseData().getJurCodesCollection()
+                .getFirst().getValue().getJuridictionCodesList());
+        assertEquals(dynamicValue, listItems.getFirst());
         assertEquals(totalJurisdictions, listItems.size());
     }
 
     @Test
     public void findDynamicValueTest() {
-        List<DynamicValueType> listItems = DynamicListHelper.createDynamicJurisdictionCodes(caseDetails1.getCaseData());
+        List<DynamicValueType> listItems = createDynamicJurisdictionCodes(caseDetails1.getCaseData());
         dynamicValueType.setCode("COM");
         dynamicValueType.setLabel("COM");
-        assertEquals(dynamicValueType, DynamicListHelper.findDynamicValue(listItems, "COM"));
+        assertEquals(dynamicValueType, findDynamicValue(listItems, "COM"));
     }
 
     @Test
@@ -178,32 +189,34 @@ public class DynamicListHelperTest {
         var caseData = caseDetails1.getCaseData();
         DynamicJudgements.dynamicJudgements(caseData);
         var totalHearings = caseData.getHearingCollection().size();
-        JudgementType judgementType = caseData.getJudgementCollection().get(0).getValue();
+        JudgementType judgementType = caseData.getJudgementCollection().getFirst().getValue();
         assertEquals(totalHearings, judgementType.getDynamicJudgementHearing().getListItems().size());
     }
 
     @Test
     public void dynamicJudgementHearing_HearingDateFilled() {
         var caseData = caseDetails1.getCaseData();
-        caseData.getJudgementCollection().get(0).getValue().setJudgmentHearingDate("2019-11-01");
+        caseData.getJudgementCollection().getFirst().getValue().setJudgmentHearingDate("2019-11-01");
         DynamicJudgements.dynamicJudgements(caseData);
         dynamicValueType.setCode("1");
         dynamicValueType.setLabel("1 : Manchester - Single - 2019-11-01");
-        assertEquals(dynamicValueType, caseData.getJudgementCollection().get(0).getValue().getDynamicJudgementHearing().getValue());
+        assertEquals(dynamicValueType, caseData.getJudgementCollection().getFirst().getValue()
+            .getDynamicJudgementHearing().getValue());
     }
 
     @Test
     public void dynamicJudgementHearing_DynamicValue() {
         var caseData = caseDetails1.getCaseData();
-        List<DynamicValueType> hearingListItems = DynamicListHelper.createDynamicHearingList(caseData);
+        List<DynamicValueType> hearingListItems = createDynamicHearingList(caseData);
         var listHearing = new DynamicFixedListType();
         listHearing.setListItems(hearingListItems);
-        caseData.getJudgementCollection().get(0).getValue().setDynamicJudgementHearing(listHearing);
+        caseData.getJudgementCollection().getFirst().getValue().setDynamicJudgementHearing(listHearing);
         dynamicValueType.setCode("1");
         dynamicValueType.setLabel("1 : Manchester - Single - 2019-11-01");
-        caseData.getJudgementCollection().get(0).getValue().getDynamicJudgementHearing().setValue(dynamicValueType);
+        caseData.getJudgementCollection().getFirst().getValue().getDynamicJudgementHearing().setValue(dynamicValueType);
         DynamicJudgements.dynamicJudgements(caseData);
-        assertEquals(dynamicValueType, caseData.getJudgementCollection().get(0).getValue().getDynamicJudgementHearing().getValue());
+        assertEquals(dynamicValueType, caseData.getJudgementCollection().getFirst().getValue()
+            .getDynamicJudgementHearing().getValue());
     }
 
     @Test
@@ -212,7 +225,7 @@ public class DynamicListHelperTest {
         DynamicJudgements.dynamicJudgements(caseData);
         assertNotNull(caseData.getJudgementCollection());
         var totalHearings = caseData.getHearingCollection().size();
-        JudgementType judgementType = caseData.getJudgementCollection().get(0).getValue();
+        JudgementType judgementType = caseData.getJudgementCollection().getFirst().getValue();
         assertEquals(totalHearings, judgementType.getDynamicJudgementHearing().getListItems().size());
     }
 
@@ -222,8 +235,8 @@ public class DynamicListHelperTest {
         caseData.setHearingCollection(null);
         DynamicJudgements.dynamicJudgements(caseData);
         assertNotNull(caseData.getJudgementCollection());
-        JudgementType judgementType = caseData.getJudgementCollection().get(0).getValue();
-        assertEquals("No Hearings", judgementType.getDynamicJudgementHearing().getListItems().get(0).getCode());
+        JudgementType judgementType = caseData.getJudgementCollection().getFirst().getValue();
+        assertEquals("No Hearings", judgementType.getDynamicJudgementHearing().getListItems().getFirst().getCode());
     }
 
     @Test
@@ -238,7 +251,7 @@ public class DynamicListHelperTest {
         DynamicJudgements.dynamicJudgements(casedata);
 
         assertNotNull(casedata.getJudgementCollection());
-        var judgementType = casedata.getJudgementCollection().get(0).getValue();
+        var judgementType = casedata.getJudgementCollection().getFirst().getValue();
         assertNull(judgementType.getJudgmentHearingDate());
     }
 }
